[package]
name = "git-branch-from-linear"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version = "0.4.38", features=["serde"]}
lazy_static = "1.5.0"
regex = "1.10.6"
serde = { version = "1.0.210", features=["derive"]}
serde_json = "1.0.127"

[[bin]]
name = "git-linear-branch"
path = "src/main.rs"
